Fix style for challenge mode on mobile and desktop.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,6 +29,14 @@ h3 {
     padding: 1rem;
 }
 
+.grid-align-left {
+    justify-self: start;
+}
+
+.grid-align-right {
+    justify-self: end;
+}
+
 /* Header & menu */
 
 /* Header */
@@ -63,16 +71,31 @@ h3 {
     padding: 0.5rem;
     z-index: 1;
     top: 0;
+    display: grid;
+    grid-template-columns: 10% 90%;
     }
 
 #game-header__game-data {
         display: none;
         grid-template-columns: 1fr 1fr;
         grid-column: 2 / 4;
+        column-gap: 1rem;;
 
 }
 
+#game-header__game-data h3 {
+    margin-right: 2rem;
+}
+
+#bestScore {
+    color: #e166c4;
+}
+
 #moves {
+    font-size: 1.5rem;
+}
+
+#bestScore {
     font-size: 1.5rem;
 }
 
@@ -716,7 +739,11 @@ Perhaps add classes like grid-6, grid-8, grid-10, etc.
         font-size: 1rem;
     }
 
-    #moves {
+    #bestScoreDiv {
+        margin-left: 2rem;
+    }
+
+    #moves, #bestScore {
         font-size: 3rem;
     }
 
